# ptcgpb_tracker

./: .gitignore  README.md  asdf.py  build-linux.sh  build-windows.bat  cardcounter-app.spec  main.py  names_builder.py  pyproject.toml  run.bat  run.sh
.github/workflows/: release.yml
app/: __init__.py  database.py  dialogs.py  get_art.py  image_processing.py  main_window.py  models.py  names.py  utils.py  workers.py
app/db/: models.py
app/db/migrations/: 0002_alter_card_set_alter_screenshot_set.py
app/translations/: de.qm  de.ts  en.qm  en.ts  es.qm  es.ts  fr.qm  fr.ts  it.qm  it.ts  ja.qm  ja.ts  ko.qm  ko.ts  zh.qm  zh.ts
data/: config.ini
