[project]
name = "ptcgpb-companion"
version = "0.6.0"
description = "Companion app for PTCGPB that lets you see what card is in what account."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "imagehash>=4.3.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyqt6>=6.10.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
